== 0.18.0

* Enhancements
  * Updated GUI for sticky show page and comments
  * Improved Calendar performance using a combination of caching and AJAX
  * Using Rails 3.2.2 and Contour 0.10.2

== 0.17.2

* Enhancements
  * Using Contour-Minimalist for styling

== 0.17.1

* Enhancements
  * ICS files are also included in emails for stickies with a due date but no due time

* Bug Fix
  * Due Date Changed email no longer triggers when a sticky with a due time is created

== 0.17.0

* Enhancements
  * Sticky filters now combine duplicate tags
  * Minor graphical tag changes on calendar
  * Stickies and templates can now have a due time and duration
  * Sticky emails are now sent if the sticky due time is changed
  * Sticky and group creation emails now include an ICS event file if a due date time is set
  * Calendar now sorts stickies by project, then by tags, then by due date time
  * Sticky tags have minor GUI update in emails

* Bug Fix
  * Email setting checkboxes for project notifications are no longer incorrectly disabled

== 0.16.2

* Bug Fix
  * Removed "assigned to me" option for sticky list page as it was redundant
  * "Assigned to Me" now correctly saves user settings on calendar

== 0.16.1

* Bug Fix
  * Stickies on calendar view are now correctly grouped by tags

== 0.16.0

* Enhancements
  * Calendar improvements:
    * Saves checked 'completed' or 'not completed' filters on calendar
    * Displays stickies in the following or preceding month
    * Can filter stickies assigned to the user
  * Project selection dropdowns are now sorted by favorites first
  * Stickies search now allows users to filter unnassigned stickies
  * Email settings page now prompts user if the user navigates away without saving updated settings
  * Tagging improvements:
    * Sticky list page can now filter stickies which contain at least one, or all selected tags
    * Tags can now be given an additional color and description