@@ -1,9 +1,3 @@
-<div style="float:right;margin-bottom:-5px">
-
-</div>
-
-<div style="clear:both"></div>
-
 <table class="blank padded" style="width:100%;table-layout:fixed">
   <tr>
     <td>
