@@ -93,7 +93,7 @@
       </td>
       <td style="vertical-align:top">
         <b>Description:</b><br /><br />
-        <pre style="margin:0px;padding:0px"><%= @sticky.full_description %></pre><br /><br />
+        <div style="margin:0px;padding:0px"><%= simple_format @sticky.full_description %></div><br /><br />
       </td>
     </tr>
   </table>
